@@ -1,3 +1,9 @@
+2008-04-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+        * win/tkWinDialog.c: backport tk_chooseColor -title fix from head
+        * win/tkWinTest.c:   Added parent to testgetwininfo
+        * tests/winDialog.test: Created some tk_chooseColor win tests.
+
 2008-04-11  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tk.h:		Bump version number to 8.5.3b1 to distinguish
